Fix crowded item input on small screens
* Shortens the English label text for the input placeholder by removing examples
* Hides the right-aligned "from Wikidata" label on small screens
* Adds CSS text truncation rule for the dropdown menu on mobile skin
* Prefer the OOUI DropdownInputWidget's "invisibleLabel" option to custom CSS
  for hiding the dropdown label on desktop skin

Bug: T254194

--- a/resources/statements/inputs/MultiTypeInputWrapperWidget.less
+++ b/resources/statements/inputs/MultiTypeInputWrapperWidget.less
@@ -19,10 +19,11 @@
 			border-bottom-left-radius: 0;
 			border-top-left-radius: 0;
 			padding-right: 6px;
+		}
 
-			.oo-ui-labelElement-label {
-				@visually-hidden();
-			}
+		.oo-ui-inputWidget-input {
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	}
 }
@@ -32,5 +33,13 @@
 		border-bottom-right-radius: 0;
 		border-right: 0;
 		border-top-right-radius: 0;
+	}
+
+	.wbmi-input-widget .oo-ui-textInputWidget > .oo-ui-labelElement-label {
+		display: none;
+
+		@media screen and ( min-width: @breakpoint-tablet ) {
+			display: initial;
+		}
 	}
 }
